--- a/themes.html
+++ b/themes.html
@@ -230,9 +230,9 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img data-original="https://i.imgur.com/WiaUPUW.png" class="lazy plugin-screenshot-img">
+                                <img data-original="https://i.imgur.com/iqvG1RK.png" class="lazy plugin-screenshot-img">
 
-                                <a href="https://i.imgur.com/WiaUPUW.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://i.imgur.com/iqvG1RK.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
                             </div>
                             <a href="https://github.com/jadeonking/Witcher-3-Theme-for-Discord/blob/master/Witcher3.theme.css" class="plugin-name" target="_blank">Witcher-3-Theme-for-Discord</a>
