--- a/themes.html
+++ b/themes.html
@@ -89,7 +89,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://betterdocs.net/images/Reborn.jpg" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://betterdocs.net/images/Reborn.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://betterdocs.net/images/Reborn.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -112,7 +112,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -134,7 +134,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://imgur.com/apUSFCc.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://imgur.com/apUSFCc.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://imgur.com/apUSFCc.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -156,7 +156,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://imgur.com/TUZpkAh.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://imgur.com/TUZpkAh.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://imgur.com/TUZpkAh.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -180,7 +180,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/4wNjej8.jpg" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/4wNjej8.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://i.imgur.com/4wNjej8.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -208,7 +208,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" src="http://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/KembEgY.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/KembEgY.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://i.imgur.com/KembEgY.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -230,7 +230,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" src="http://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/iqvG1RK.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/iqvG1RK.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://i.imgur.com/iqvG1RK.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -256,7 +256,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/IHZdiU6.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/IHZdiU6.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://i.imgur.com/IHZdiU6.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -278,7 +278,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/sgExoJm.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/sgExoJm.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://i.imgur.com/sgExoJm.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
@@ -300,7 +300,7 @@
 
                         <li class="plugin on">
                             <div class="plugin-screenshot">
-                                <img src="http://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/dgRUWfn.png" class="lazy plugin-screenshot-img">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/dgRUWfn.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
 
                                 <a href="https://i.imgur.com/dgRUWfn.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
 
