--- a/themes.html
+++ b/themes.html
@@ -36,9 +36,6 @@
     ga('create', 'UA-65593962-3', 'auto');
     ga('send', 'pageview');
 </script>
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.min.js"></script>
 
 </head>
 
@@ -71,11 +68,7 @@
                 </a>
             </div>
         </header>
-        <script>
-            $(function() {
-                $("img.lazy").lazyload();
-            });
-        </script>
+
         <div id="content-wrap">
             <div class="wrapper">
                 <div class="inner">
@@ -360,8 +353,16 @@
     <!-- Scripts -->
     <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://www.appelsiini.net/projects/lazyload/jquery.lazyload.js?v=1.9.1"></script>
+    <script type="text/javascript" charset="utf-8">
+    $(function() {
+       $("img.lazy").lazyload({
+           effect : "fadeIn"
+       });
 
-
+    });
+    </script>
 
 
 
