--- a/themes.html
+++ b/themes.html
@@ -354,7 +354,7 @@
     <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazyload/2.0.3/lazyload-min.js"></script>
+    <script src="https://betterdocs.net/scripts/jquery.lazyload.min.js"></script>
     <script type="text/javascript" charset="utf-8">
     $(function() {
        $("img.lazy").lazyload({
