--- a/plugins.html
+++ b/plugins.html
@@ -93,6 +93,22 @@
 
                             </div>
                         </li>
+                        
+                        <li class="plugin on">
+                            <a href="https://github.com/IRDeNial/BD-Server-Themes" class="plugin-name" target="_blank">Server Themes</a>
+                            <p class="plugin-desc">Allow individual servers to use specific themes.</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#Denial" class="plugin-tag">Denial</a>
+
+                                <a href="#Themes" class="plugin-tag">Themes</a>
+
+                                <a href="#Plugins" class="plugin-tag">Plugins</a>
+                                
+                                <a href="#Repo" class="plugin-tag">Repo</a>
+
+                            </div>
+                        </li>
 
                         <li class="plugin on">
                             <a href="https://github.com/Jiiks/BetterDiscordApp/blob/master/Plugins/clock.plugin.js" class="plugin-name" target="_blank">Digital Clock</a>
