--- a/themes.html
+++ b/themes.html
@@ -310,6 +310,28 @@
 
                             </div>
                         </li>
+                        
+                        <li class="plugin on">
+                            <div class="plugin-screenshot">
+                                <img src="https://i.imgur.com/QugV6W2.gif" data-original="https://i.imgur.com/QIZthyb.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
+
+                                <a href="https://i.imgur.com/QIZthyb.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+
+                            </div>
+                            <a href="https://github.com/Zekeeh/Wheat-Transparency/blob/master/WheatTransparency.theme.css" class="plugin-name" target="_blank">Wheat Transparency</a>
+                            <p class="plugin-desc">A wheat theme for Discord</p>
+                            <div class="plugin-tag-list">
+
+                                <a href="#Zekeeh" class="plugin-tag">Zekeeh</a>
+
+                                <a href="#Dark" class="plugin-tag">Dark</a>
+
+                                <a href="#Orange" class="plugin-tag">Orange</a>
+                                
+                                <a href="#Wheat" class="plugin-tag">Wheat</a>
+
+                            </div>
+                        </li>
 
                     </ul>
                 </div>
