--- a/plugins.html
+++ b/plugins.html
@@ -102,6 +102,8 @@
                                 <a href="#Denial" class="plugin-tag">Denial</a>
 
                                 <a href="#Themes" class="plugin-tag">Themes</a>
+                                
+                                <a href="#Themes" class="plugin-tag">Servers</a>
 
                             </div>
                         </li>
@@ -113,8 +115,6 @@
 
                                 <a href="#Denial" class="plugin-tag">Denial</a>
                                 
-                                <a href="#EvenBetterRepo" class="plugin-tag">EvenBetterRepo</a>
-
                                 <a href="#Themes" class="plugin-tag">Themes</a>
 
                                 <a href="#Plugins" class="plugin-tag">Plugins</a>
@@ -193,7 +193,7 @@
 
                                 <a href="#Images" class="plugin-tag">Images</a>
 
-                                <a href="#embed" class="plugin-tag">embed</a>
+                                <a href="#Embed" class="plugin-tag">Embed</a>
 
                                 <a href="#Convert" class="plugin-tag">Convert</a>
 
