--- a/themes.html
+++ b/themes.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="How to install BetterDiscord on Linux to customize the world of Discord users." name=description>
+<meta content="List of free high quality themes by our community!" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
 <link rel="stylesheet" href="https://betterdocs.net/stylesheets/style.css">
