--- a/install_plugin.html
+++ b/install_plugin.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="How to install custom plugins for BetterDiscord to make you Discord experience a whole lot better." name=description>
+<meta content="How to install custom plugins for BetterDiscord to make your Discord experience a whole lot better." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
 <link rel="stylesheet" href="/stylesheets/style.css">
