--- a/themes.html
+++ b/themes.html
@@ -89,14 +89,15 @@
                             <p class="plugin-desc">Beautiful theme all I have to say. </p>
                             <div class="plugin-tag-list">
 
-                                <a href="#DiscordReborn" class="plugin-tag">DiscordReborn</a>
+                                <a href="#Omniscient" class="plugin-tag">Omniscient</a>
 
                                 <a href="#Reborn" class="plugin-tag">Reborn</a>
 
                                 <a href="#Transparent" class="plugin-tag">Transparent</a>
 
                                 <a href="#blue" class="plugin-tag">blue</a>
-
+                                
+                                <a href="#Modern" class="plugin-tag">Modern</a>
 
                             </div>
                         </li>
@@ -110,7 +111,7 @@
                             <p class="plugin-desc">A cold, dark & frosty theme.</p>
                             <div class="plugin-tag-list">
 
-                                <a href="#DarkMatter" class="plugin-tag">DarkMatter</a>
+                                <a href="#Hammock" class="plugin-tag">Hammock</a>
 
                                 <a href="#Dark" class="plugin-tag">Dark</a>
 
@@ -130,7 +131,7 @@
                             <p class="plugin-desc">A soft little theme for Disney fans! </p>
                             <div class="plugin-tag-list">
 
-                                <a href="#SleepingBeauty" class="plugin-tag">SleepingBeauty</a>
+                                <a href="#Maple" class="plugin-tag">Maple</a>
 
                                 <a href="#Disney" class="plugin-tag">Disney</a>
 
@@ -150,7 +151,7 @@
                             <p class="plugin-desc">Modern and Cleaned up Discords UI and custom smooth animations.</p>
                             <div class="plugin-tag-list">
 
-                                <a href="#MaterialTheme" class="plugin-tag">MaterialTheme</a>
+                                <a href="#BeardDesign" class="plugin-tag">BeardDesign</a>
 
                                 <a href="#apollo" class="plugin-tag">Flat</a>
 
