--- a/plugins.html
+++ b/plugins.html
@@ -139,7 +139,7 @@
                         </li>
 
                         <li class="plugin on">
-                            <a href="https://gist.github.com/megamit/7a686742c2768f34cf4d83e1055e9375" class="plugin-name" target="_blank">Renamer</a>
+                            <a href="https://github.com/megamit/repository/tree/gh-pages/renamer" class="plugin-name" target="_blank">Renamer</a>
                             <p class="plugin-desc">Give anyone a nickname that only you can see simply by right clicking on them.</p>
                             <div class="plugin-tag-list">
 
