--- a/themes.html
+++ b/themes.html
@@ -83,7 +83,7 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/PYzHTpP.gif" data-original="https://betterdocs.net/images/Reborn.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://betterdocs.net/images/Reborn.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/discordreborn.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
                             <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" class="plugin-name" target="_blank">Discord Reborn</a>
                             <p class="plugin-desc">Beautiful theme all I have to say. </p>
