--- a/themes/discordreborn.html
+++ b/themes/discordreborn.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Plugins | Discord</title>
+<title>Discord Reborn</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="List of free high quality plugins by our community!" name=description>
+<meta content="Beautiful theme all I have to say." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
 <link rel="stylesheet" href="../stylesheets/style.css">
