--- a/themes.html
+++ b/themes.html
@@ -105,7 +105,7 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/PYzHTpP.gif" data-original="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/darkmatter.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
                             <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" class="plugin-name" target="_blank">Dark Matter</a>
                             <p class="plugin-desc">A cold, dark & frosty theme.</p>
