--- a/themes/darkmatter.html
+++ b/themes/darkmatter.html
@@ -74,8 +74,8 @@
                     <header class="release-header">
                     <h1 class="release-title" itemprop="name">Discord Reborn</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" target="_blank" class="btn-release">Download</a>
-                            <div class="btn-author">Omniscient</div>
+                            <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
+                            <div class="btn-author">Hammock</div>
                         </div>
 						<iframe class="discord-preview" src="https://betterdocs.net/themes/discordtheme/darkmatter.html"></iframe>
                     </header>
