--- a/themes/darkmatter.html
+++ b/themes/darkmatter.html
@@ -72,7 +72,7 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">Discord Reborn</h1>
+                    <h1 class="release-title" itemprop="name">Dark Matter</h1>
                         <div class="release-btns">
                             <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Hammock</div>
