--- a/themes.html
+++ b/themes.html
@@ -95,7 +95,7 @@
 
                                 <a href="#Transparent" class="plugin-tag">Transparent</a>
 
-                                <a href="#blue" class="plugin-tag">blue</a>
+                                <a href="#Blue" class="plugin-tag">Blue</a>
                                 
                                 <a href="#Modern" class="plugin-tag">Modern</a>
 
@@ -117,7 +117,7 @@
 
                                 <a href="#Transparent" class="plugin-tag">Transparent</a>
 
-                                <a href="#blue" class="plugin-tag">blue</a>
+                                <a href="#Blue" class="plugin-tag">Blue</a>
 
                             </div>
                         </li>
