--- a/themes.html
+++ b/themes.html
@@ -85,7 +85,7 @@
                                 <img src="https://betterdocs.net/images/Reborn.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
                                 <a href="https://betterdocs.net/themes/discordreborn.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" class="plugin-name" target="_blank">Discord Reborn</a>
+                            <a href="https://betterdocs.net/themes/discordreborn.html" class="plugin-name" target="_blank">Discord Reborn</a>
                             <p class="plugin-desc">Beautiful theme all I have to say. </p>
                             <div class="plugin-tag-list">
 
@@ -107,7 +107,7 @@
                                 <img src="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
                                 <a href="https://betterdocs.net/themes/darkmatter.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" class="plugin-name" target="_blank">Dark Matter</a>
+                            <a href="https://betterdocs.net/themes/darkmatter.html" class="plugin-name" target="_blank">Dark Matter</a>
                             <p class="plugin-desc">A cold, dark & frosty theme.</p>
                             <div class="plugin-tag-list">
 
