--- a/themes/beta.html
+++ b/themes/beta.html
@@ -125,7 +125,7 @@
 cssLink.href = "https://rawgit.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
-frames['frame1'].document.body.appendChild(cssLink);
+frames['frame1'].document.head.appendChild(cssLink);
     </script>
 
 </body>
