--- a/themes/beta.html
+++ b/themes/beta.html
@@ -119,7 +119,8 @@
     </nav>
     <!-- Scripts -->
     <script src="https://betterdocs.net/scripts/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
+    <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
 	var cssLink = document.createElement("link") 
 cssLink.href = "https://rawgit.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css"; 
