--- a/themes/beta.html
+++ b/themes/beta.html
@@ -120,13 +120,13 @@
     <!-- Scripts -->
     <script src="https://betterdocs.net/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script>
 	var cssLink = document.createElement("link") 
 cssLink.href = "https://rawgit.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
-frames['frame1'].document.head.appendChild(cssLink);
+window.frames['iframe1'].document.head.appendChild(cssLink);
     </script>
 
 </body>
