--- a/themes/beta.html
+++ b/themes/beta.html
@@ -122,11 +122,13 @@
     <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script>
-	var cssLink = document.createElement("link") 
+	document.getElementById('iframe1').onload = function() {
+       var cssLink = document.createElement("link") 
 cssLink.href = "https://rawgit.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
 window.frames['iframe1'].document.head.appendChild(cssLink);
+    }
     </script>
 
 </body>
