--- a/themes/darkmatter.html
+++ b/themes/darkmatter.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Dark Matter</title>
+<title>Discord Reborn</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="A cold, dark & frosty theme" name=description>
+<meta content="Beautiful theme all I have to say." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
 <link rel="stylesheet" href="../stylesheets/style.css">
@@ -77,7 +77,7 @@
                             <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Hammock</div>
                         </div>
-						<iframe class="discord-preview" src="https://betterdocs.net/themes/discordtheme/darkmatter.html"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/discordtheme/discord.html"></iframe>
                     </header>
                 </div>
             </div>
@@ -119,8 +119,17 @@
     </nav>
     <!-- Scripts -->
     <script src="https://betterdocs.net/scripts/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
-
+    <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script>
+	document.getElementById('iframe1').onload = function() {
+       var cssLink = document.createElement("link") 
+cssLink.href = "https://rawgit.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"; 
+cssLink.rel = "stylesheet"; 
+cssLink.type = "text/css"; 
+window.frames['iframe1'].document.head.appendChild(cssLink);
+    }
+    </script>
 
 </body>
 
