--- a/themes/discordreborn.html
+++ b/themes/discordreborn.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Omniscient</div>
                         </div>
-						<iframe class="discord-preview" src="https://betterdocs.net/themes/discordtheme/discordreborn.html"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/discordtheme/discord.html"></iframe>
                     </header>
                 </div>
             </div>
@@ -119,8 +119,17 @@
     </nav>
     <!-- Scripts -->
     <script src="https://betterdocs.net/scripts/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
-
+    <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script>
+	document.getElementById('iframe1').onload = function() {
+       var cssLink = document.createElement("link") 
+cssLink.href = "https://rawgit.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css"; 
+cssLink.rel = "stylesheet"; 
+cssLink.type = "text/css"; 
+window.frames['iframe1'].document.head.appendChild(cssLink);
+    }
+    </script>
 
 </body>
 
