--- a/themes.html
+++ b/themes.html
@@ -125,9 +125,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/apUSFCc.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://imgur.com/apUSFCc.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/sleepingbeauty.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/mrmaple240/Sleeping-Beauty" class="plugin-name" target="_blank">Sleeping Beauty</a>
+                            <a href="https://betterdocs.net/themes/sleepingbeauty.html" class="plugin-name" target="_blank">Sleeping Beauty</a>
                             <p class="plugin-desc">A soft little theme for Disney fans! </p>
                             <div class="plugin-tag-list">
 
@@ -145,9 +145,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/TUZpkAh.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://imgur.com/TUZpkAh.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/materialtheme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/BeardDesign1/Material-design-theme/tree/themes" class="plugin-name" target="_blank">Material Theme</a>
+                            <a href="https://betterdocs.net/themes/materialtheme.html" class="plugin-name" target="_blank">Material Theme</a>
                             <p class="plugin-desc">Modern and Cleaned up Discords UI and custom smooth animations.</p>
                             <div class="plugin-tag-list">
 
