--- a/themes/sleepingbeauty.html
+++ b/themes/sleepingbeauty.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Dark Matter</title>
+<title>Sleeping Beauty</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="A cold, dark & frosty theme" name=description>
+<meta content="A soft little theme for Disney fans!" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<!-- CSS -->
 <!-- CSS -->
 <link rel="stylesheet" href="../stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -73,10 +72,10 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">Dark Matter</h1>
+                    <h1 class="release-title" itemprop="name">Sleeping Beauty</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css" target="_blank" class="btn-release">Download</a>
-                            <div class="btn-author">Hammock</div>
+                            <a href="https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.csshttps://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" target="_blank" class="btn-release">Download</a>
+                            <div class="btn-author">Maple</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/discordtheme/discord.html"></iframe>
                     </header>
@@ -125,7 +124,7 @@
     <script>
 	document.getElementById('iframe1').onload = function() {
        var cssLink = document.createElement("link") 
-cssLink.href = "https://rawgit.com/cosmicsalad/Discord-Themes-and-Plugins/master/themes/DarkMatter/DarkMatter.theme.css"; 
+cssLink.href = "https://rawgit.com/mrmaple240/Sleeping-Beauty/master/sleepingbeauty.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
 window.frames['iframe1'].document.head.appendChild(cssLink);
