--- a/themes/discordreborn.html
+++ b/themes/discordreborn.html
@@ -77,7 +77,7 @@
                             <a href="https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Omniscient</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/discordtheme/discord.html"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html"></iframe>
                     </header>
                 </div>
             </div>
