--- a/themes/materialtheme.html
+++ b/themes/materialtheme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Material Theme</title>
+<title>Beard's Material Theme</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
@@ -72,7 +72,7 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">Material Theme</h1>
+                    <h1 class="release-title" itemprop="name">Beard's Material Theme</h1>
                         <div class="release-btns">
                             <a href="https://github.com/BeardDesign1/Material-design-theme/blob/themes/Beard's-Material-theme-for-Discord.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Beard Design</div>
