--- a/themes/discordreborn.html
+++ b/themes/discordreborn.html
@@ -13,8 +13,8 @@
 <!-- Open Graph -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://betterdocs.net/" />
-<meta property="og:site_name" content="Omni" />
-<meta property="og:title" content="BetterDiscord Docs" />
+<meta property="og:site_name" content="BetterDiscord Docs" />
+<meta property="og:title" content="Discord Reborn" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
