--- a/themes.html
+++ b/themes.html
@@ -167,9 +167,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/4wNjej8.jpg" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/4wNjej8.jpg" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/overwatch.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/Matthaz/Overwatch_theme/blob/master/Overwatch.theme.css" class="plugin-name" target="_blank">Overwatch</a>
+                            <a href="https://betterdocs.net/themes/overwatch.html" class="plugin-name" target="_blank">Overwatch</a>
                             <p class="plugin-desc">A nice transparent Overwatch theme.</p>
                             <div class="plugin-tag-list">
 
