--- a/themes.html
+++ b/themes.html
@@ -193,9 +193,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/KembEgY.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/KembEgY.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/outerspace.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/Narugokyu/nova-theme/blob/master/space_nova.theme.css" class="plugin-name" target="_blank">Space Nova</a>
+                            <a href="https://betterdocs.net/themes/outerspace.html" class="plugin-name" target="_blank">Space Nova</a>
                             <p class="plugin-desc">Outerspace Dark theme.</p>
                             <div class="plugin-tag-list">
 
