--- a/themes.html
+++ b/themes.html
@@ -213,9 +213,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/iqvG1RK.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/iqvG1RK.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/witcher3.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/jadeonking/Witcher-3-Theme-for-Discord/blob/master/Witcher3.theme.css" class="plugin-name" target="_blank">Witcher-3-Theme-for-Discord</a>
+                            <a href="https://betterdocs.net/themes/witcher3.html" class="plugin-name" target="_blank">Witcher-3-Theme-for-Discord</a>
                             <p class="plugin-desc">The Witcher 3 Dark Theme.</p>
                             <div class="plugin-tag-list">
 
@@ -237,9 +237,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/IHZdiU6.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/IHZdiU6.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/datdiscord.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/Viniuau/Dat-Discord/blob/master/Dat%20Discord.theme.css" class="plugin-name" target="_blank">Dat Discord</a>
+                            <a href="https://betterdocs.net/themes/datdiscord.html" class="plugin-name" target="_blank">Dat Discord</a>
                             <p class="plugin-desc">A theme green/blue based.</p>
                             <div class="plugin-tag-list">
 
