--- a/themes.html
+++ b/themes.html
@@ -145,9 +145,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://imgur.com/TUZpkAh.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://betterdocs.net/themes/materialtheme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/beardsmaterialtheme.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://betterdocs.net/themes/materialtheme.html" class="plugin-name" target="_blank">Material Theme</a>
+                            <a href="https://betterdocs.net/themes/beardsmaterialtheme.html" class="plugin-name" target="_blank">Beards Material Theme</a>
                             <p class="plugin-desc">Modern and Cleaned up Discords UI and custom smooth animations.</p>
                             <div class="plugin-tag-list">
 
@@ -257,9 +257,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/sgExoJm.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/sgExoJm.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/rezero.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/CurimuChizu/CC-Themes/blob/master/CC-Themes/ReZero.theme.css" class="plugin-name" target="_blank">Zero Theme</a>
+                            <a href="https://betterdocs.net/themes/rezero.html" class="plugin-name" target="_blank">ReZero Theme</a>
                             <p class="plugin-desc">ReZero anime theme.</p>
                             <div class="plugin-tag-list">
 
@@ -277,9 +277,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/dgRUWfn.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/dgRUWfn.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/shadesofred.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/trueprominency/Shades-of-Red-Theme/blob/master/shades-of-red.theme.css" class="plugin-name" target="_blank">Shades of Red</a>
+                            <a href="https://betterdocs.net/themes/shadesofred.html" class="plugin-name" target="_blank">Shades of Red</a>
                             <p class="plugin-desc">Great colors of red collide</p>
                             <div class="plugin-tag-list">
 
@@ -295,9 +295,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/QIZthyb.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/QIZthyb.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/wheattransparency.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/Zekeeh/Wheat-Transparency/blob/master/WheatTransparency.theme.css" class="plugin-name" target="_blank">Wheat Transparency</a>
+                            <a href="https://betterdocs.net/themes/wheattransparency.html" class="plugin-name" target="_blank">Wheat Transparency</a>
                             <p class="plugin-desc">A wheat theme for Discord</p>
                             <div class="plugin-tag-list">
 
