--- a/themes.html
+++ b/themes.html
@@ -257,10 +257,10 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/sgExoJm.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://betterdocs.net/themes/rezero.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/red&black.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://betterdocs.net/themes/rezero.html" class="plugin-name" target="_blank">ReZero Theme</a>
-                            <p class="plugin-desc">ReZero anime theme.</p>
+                            <a href="https://betterdocs.net/themes/red&black.html" class="plugin-name" target="_blank">Red & Black Theme</a>
+                            <p class="plugin-desc">Red & Black theme.</p>
                             <div class="plugin-tag-list">
 
                                 <a href="#CC" class="plugin-tag">CC</a>
