--- a/themes/red&black.html
+++ b/themes/red&black.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>ReZero</title>
+<title>Red & Black</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="ReZero anime theme" name=description>
+<meta content="Red & Black theme" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
 <!-- CSS -->
@@ -15,7 +15,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDiscord Docs" />
-<meta property="og:title" content="ReZero" />
+<meta property="og:title" content="Red & Black" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
@@ -73,9 +73,9 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">ReZero</h1>
+                    <h1 class="release-title" itemprop="name">Red & Black</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/CurimuChizu/CC-Themes/blob/master/CC-Themes/ReZero.theme.css" target="_blank" class="btn-release">Download</a>
+                            <a href="https://github.com/CurimuChizu/CC-Themes/blob/master/CC-Themes/Red.n.Black.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">CC</div>
                         </div>
 						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html"></iframe>
@@ -125,7 +125,7 @@
     <script>
 	document.getElementById('iframe1').onload = function() {
        var cssLink = document.createElement("link") 
-cssLink.href = "https://rawgit.com/CurimuChizu/CC-Themes/master/CC-Themes/ReZero.theme.css"; 
+cssLink.href = "https://rawgit.com/CurimuChizu/CC-Themes/master/CC-Themes/Red.n.Black.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
 window.frames['iframe1'].document.head.appendChild(cssLink);
