--- a/themes.html
+++ b/themes.html
@@ -315,9 +315,9 @@
                         <li class="plugin on">
                             <div class="plugin-screenshot">
                                 <img src="https://i.imgur.com/Uo4Ec5S.png" class="lazy plugin-screenshot-img" width="auto" height="auto">
-                                <a href="https://i.imgur.com/Uo4Ec5S.png" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
+                                <a href="https://betterdocs.net/themes/originalmodern.html" class="plugin-preview-link" target="_blank"><i class="fa fa-eye"></i></a>
                             </div>
-                            <a href="https://github.com/mathiaslsn/OriginalModern/blob/master/mat.theme.css" class="plugin-name" target="_blank">OriginalModern</a>
+                            <a href="https://betterdocs.net/themes/originalmodern.html" class="plugin-name" target="_blank">OriginalModern</a>
                             <p class="plugin-desc">Black with red highlights.</p>
                             <div class="plugin-tag-list">
 
