--- a/themes/originalmodern.html
+++ b/themes/originalmodern.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
-<title>Wheat Transparency</title>
+<title>Original Modern</title>
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="A wheat theme for Discord" name=description>
+<meta content="Black with red highlights." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<!-- CSS -->
 <!-- CSS -->
 <link rel="stylesheet" href="../stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -15,7 +14,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://betterdocs.net/" />
 <meta property="og:site_name" content="BetterDiscord Docs" />
-<meta property="og:title" content="Wheat Transparency" />
+<meta property="og:title" content="Original Modern" />
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
@@ -73,12 +72,12 @@
             <div class="wrapper">
                 <div class="inner">
                     <header class="release-header">
-                    <h1 class="release-title" itemprop="name">Wheat Transparency</h1>
+                    <h1 class="release-title" itemprop="name">Original Modern</h1>
                         <div class="release-btns">
-                            <a href="https://github.com/Zekeeh/Wheat-Transparency/blob/master/WheatTransparency.theme.css" target="_blank" class="btn-release">Download</a>
-                            <div class="btn-author">Zekeeh</div>
+                            <a href="https://github.com/mathiaslsn/OriginalModern/blob/master/mat.theme.css" target="_blank" class="btn-release">Download</a>
+                            <div class="btn-author">Mat3</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://github.com/Zekeeh/Wheat-Transparency/raw/master/WheatTransparency.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://github.com/mathiaslsn/OriginalModern/raw/master/mat.theme.css"></iframe>
                     </header>
                 </div>
             </div>
@@ -125,7 +124,7 @@
     <script>
 	document.getElementById('iframe1').onload = function() {
        var cssLink = document.createElement("link") 
-cssLink.href = "https://github.com/Zekeeh/Wheat-Transparency/raw/master/WheatTransparency.theme.css"; 
+cssLink.href = "https://github.com/mathiaslsn/OriginalModern/raw/master/mat.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
 window.frames['iframe1'].document.head.appendChild(cssLink);
