--- a/themes/wheattransparency.html
+++ b/themes/wheattransparency.html
@@ -78,7 +78,7 @@
                             <a href="https://github.com/Zekeeh/Wheat-Transparency/blob/master/WheatTransparency.theme.css" target="_blank" class="btn-release">Download</a>
                             <div class="btn-author">Zekeeh</div>
                         </div>
-						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://github.com/Zekeeh/Wheat-Transparency/raw/master/WheatTransparency.theme.css"></iframe>
+						<iframe name="iframe1" id="iframe1" class="discord-preview" src="../themes/assets/discord.html?theme=https://raw.githubusercontent.com/Zekeeh/Wheat-Transparency/master/WheatTransparency.theme.css"></iframe>
                     </header>
                 </div>
             </div>
@@ -125,7 +125,7 @@
     <script>
 	document.getElementById('iframe1').onload = function() {
        var cssLink = document.createElement("link") 
-cssLink.href = "https://github.com/Zekeeh/Wheat-Transparency/raw/master/WheatTransparency.theme.css"; 
+cssLink.href = "https://raw.githubusercontent.com/Zekeeh/Wheat-Transparency/master/WheatTransparency.theme.css"; 
 cssLink.rel = "stylesheet"; 
 cssLink.type = "text/css"; 
 window.frames['iframe1'].document.head.appendChild(cssLink);
